manifests/ate-install/examples/atenet-gateway-agw-gatewayapi.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: atenet-gateway
  namespace: ate-system
spec:
  gatewayClassName: agentgateway
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayPolicy
metadata:
  name: atenet-extproc
  namespace: ate-system
spec:
  targetRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: atenet-gateway
  traffic:
    extProc:
      backendRef:
        name: atenet-router
        namespace: ate-system
        port: 50051
      processingOptions:
        requestHeaderMode: Send
        responseHeaderMode: Skip
        requestBodyMode: None
        responseBodyMode: None
        requestTrailerMode: Skip
        responseTrailerMode: Skip
---
apiVersion: agentgateway.dev/v1alpha1
kind: AgentgatewayBackend
metadata:
  name: atenet-dfp
  namespace: ate-system
spec:
  dynamicForwardProxy: {}
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: atenet-actors
  namespace: ate-system
spec:
  parentRefs:
  - name: atenet-gateway
  hostnames:
  - "*.actors.resources.substrate.ate.dev"
  rules:
  - backendRefs:
    - name: atenet-dfp
      group: agentgateway.dev
      kind: AgentgatewayBackend
